# quint-rs

./: .gitignore  Cargo.toml  README.md  expr.md
evaluator/: Cargo.toml
evaluator/tests/: evaluation_tests.rs
evaluator/tests/snapshots/: deserialization_tests__ewd426.snap.new  deserialization_tests__ewd840.snap.new
parser/: Cargo.toml  README.md
parser/fixtures/: nocomments.qnt
parser/src/: lexer.rs  lib.rs  quint.lalrpop  utils.rs
parser/tests/: evaluation_tests.rs  integration.rs
