[package]
name = "quint_evaluator"
version = "0.2.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fxhash = "0.2.1"
indexmap = { version = "2.7", features = ["serde"] }
rand = "0.9.0"
squares-rnd = "3.1.0"
itertools = "0.14.0"
tempfile = "3.16.0"
serde_path_to_error = "0.1"
colored = "3.0.0"
imbl = "5.0.0"
itf = "0.3.0"
chrono = "0.4.40"

argh.workspace = true
eyre.workspace = true
thiserror.workspace = true
hipstr.workspace = true


[dev-dependencies]
insta = { version = "1.22.0", features = ["yaml"] }
criterion = "0.5"

[[bench]]
name = "tuples"
harness = false

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "evaluator"
harness = false
