[package]
name = "quint-parser"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Dave Bryson"]

[dependencies]
eyre.workspace = true
logos = "0.15.1"
lalrpop-util = { version = "0.22.2", features = ["unicode"] }
quint_evaluator = { path = "../evaluator" }

[build-dependencies]
lalrpop = "0.22.2"
